# Solver2x2-CXX

./: CMakeLists.txt  README.md  depth.txt  example.cpp  main.cpp
include/: Solver2x2.h
src/: Coords.cpp  Coords.h  Explore.cpp  Explore.h  Solver2x2.cpp  Tiles.cpp  Tiles.h  move.cpp  move.h
